# gearstick-cli

./: Cargo.toml  Test.json  Vault.json
src/: main.rs
