[package]
name = "gearstick-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.159", features = ["derive"] }  
serde_derive = "1.0.159"
serde_json = "1.0.95"
uuid = { version = "1.3.0", features = ["fast-rng", "v4", "macro-diagnostics"] }
